# cspgen-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.yml  csp.rs  main.rs
