[package]
name = "cspgen"
version = "0.2.1"
authors = ["Jean-Philippe Bidegain <jp@bidega.in>"]
description = "CSP generation from an url"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2", features = ["yaml"]}
headless_chrome = "0.9.0"
failure = "0.1.8"
url = "2.1.1"
merge = "0.1.0"
