[package]
name = "cspgen"
version = "0.2.6"
authors = ["Jean-Philippe Bidegain <jp@bidega.in>"]
description = "CSP generation from an url"
edition = "2021"
license = "MIT"

[dependencies]
headless_chrome = "1.0.2"
url = "2.3.1"
merge = "0.1.0"
clap = { version = "4.1.4", features = ["derive"] }
anyhow = "1.0.69"
